# lumen-veil

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
configs/jurisdictions/: sorox.json  vossk.json
docs/: api.md  architecture.md  development.md  events.md  glossary.md  manifesto.md  physics.md  policies.md  scenarios.md
examples/: cli.md  flow_release.md
physics/src/: lumen_native.c
scenarios/: authorized_convoy_anomaly.json  false_flag_crossing.json  low_mass_swarm.json  neutral_liturgical_corridor.json  sorox_unsealed_arrival.json  sorox_vossk_sovereignty_conflict.json  storm_degraded_sensor.json  vossk_minor_intrusion.json
scripts/: build_native.sh  run_example.sh
src/lumen_veil/: __init__.py  api.py  cli.py  domain.py  events.py  observability.py  physics.py  policy.py  scenario.py
src/lumen_veil/services/: __init__.py  audit.py  authority.py  containment.py  identity.py  replay.py  scenario.py  sensing.py  simulation.py  telemetry.py  training.py
tests/: test_api.py  test_domain.py  test_events.py  test_physics.py  test_policy.py  test_properties.py
