[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumen-veil"
version = "0.1.0"
description = "Non-lethal interplanetary perimeter defense simulator for Sorox and Vossk."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Codex" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Simulation",
]

[project.scripts]
lumen-veil = "lumen_veil.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
